商品列表页渲染完成

--- a/project.config.json
+++ b/project.config.json
@@ -58,10 +58,10 @@
 					"scene": null
 				},
 				{
-					"id": -1,
+					"id": 1,
 					"name": "商品列表页",
 					"pathName": "pages/goods_list/index",
-					"query": "id=6",
+					"query": "cid=6",
 					"scene": null
 				}
 			]
